[gd_scene load_steps=28 format=2]

[ext_resource path="res://GFX/Background/bg_layer2.png" type="Texture" id=1]
[ext_resource path="res://GFX/Background/bg_layer1.png" type="Texture" id=2]
[ext_resource path="res://GFX/Background/bg_layer4.png" type="Texture" id=3]
[ext_resource path="res://GFX/Background/bg_layer3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/Coin HUD.gd" type="Script" id=5]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GFX/Items/bronze_1.png" type="Texture" id=7]
[ext_resource path="res://GFX/Tileset/Tilemap.tres" type="TileSet" id=8]
[ext_resource path="res://GFX/Players/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://SFX/Chiptune_Adventures_1.ogg" type="AudioStream" id=10]
[ext_resource path="res://GFX/Items/coin.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Levels/Level02.gd" type="Script" id=12]
[ext_resource path="res://GFX/Enemies/enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://GFX/Enemies/Cloud.tscn" type="PackedScene" id=14]
[ext_resource path="res://GFX/Items/portal_yellow.png" type="Texture" id=15]
[ext_resource path="res://GFX/Environment/Platform01.tscn" type="PackedScene" id=16]
[ext_resource path="res://Fonts/Milky Coffee.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://GFX/Tileset/pass_through.tres" type="TileSet" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.235294 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3908.5, 44.5 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3520, 1311 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "UpDown"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3520, 1311 ), Vector2( 3520, 500 ), Vector2( 3520, 1311 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 128, 37 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=7]
size = 92
font_data = ExtResource( 17 )

[node name="Level02" type="Node2D"]
script = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4096, 4096 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky"]
position = Vector2( 6, 3 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="fartest" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4096, 4096 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/fartest"]
position = Vector2( 0, -1000 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="middle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4096, 4096 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/middle"]
position = Vector2( 0, -1000 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="nearest" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4096, 4096 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/nearest"]
position = Vector2( -20, -1197 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coin HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Coin HUD"]
anchor_left = 0.984259
anchor_right = 1.0
anchor_bottom = 0.03125
margin_left = -168.0
margin_top = 17.0
margin_right = -6.0
margin_bottom = 79.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Coin HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -183.0
margin_top = 35.0
margin_right = -122.0
margin_bottom = 96.0
texture = ExtResource( 7 )
expand = true

[node name="X" type="Label" parent="Coin HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 48.0
margin_right = -87.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.662745, 0.423529, 0.160784, 1 )
custom_fonts/font = SubResource( 2 )
text = "x"

[node name="Coins" type="Label" parent="Coin HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 33.0
margin_right = -15.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.662745, 0.423529, 0.160784, 1 )
custom_fonts/font = SubResource( 3 )
text = "##"
valign = 1

[node name="Fallzone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 3712, 3168 )
shape = SubResource( 4 )

[node name="Platform01" parent="." instance=ExtResource( 16 )]
position = Vector2( 3943, 384 )

[node name="enemies" type="Node2D" parent="."]

[node name="Spike_guy" parent="enemies" instance=ExtResource( 13 )]
position = Vector2( 2208, 960 )

[node name="Spike_guy2" parent="enemies" instance=ExtResource( 13 )]
position = Vector2( 3520, 1440 )

[node name="Cloud" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( 3520, 1311 )

[node name="Animationupdown" type="AnimationPlayer" parent="enemies/Cloud"]
anims/RESET = SubResource( 8 )
anims/UpDown = SubResource( 9 )

[node name="Tile trap" type="TileMap" parent="."]
tile_set = ExtResource( 18 )
format = 1
tile_data = PoolIntArray( 1638444, 8, 0, 1638445, 8, 0, 1638446, 8, 0, 1638447, 8, 0, 1703980, 9, 0, 1703981, 9, 0, 1703982, 8, 0, 1703983, 9, 0, 1769516, 9, 0, 1769517, 9, 0, 1769518, 9, 0, 1769519, 9, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( 1114145, 0, 0, 1114155, 1, 0, 1572879, 1, 0, 1638426, 10, 0, 1638427, 10, 0, 1638428, 10, 0, 1638429, 10, 0, 1638430, 10, 0, 1638431, 10, 0, 1638432, 10, 0, 1638433, 10, 0, 1638434, 10, 0, 1638435, 10, 0, 1638436, 10, 0, 1638437, 10, 0, 1638438, 10, 0, 1638439, 10, 0, 1638440, 10, 0, 1638441, 10, 0, 1638442, 10, 0, 1638443, 10, 0, 1638448, 10, 0, 1638449, 10, 0, 1638450, 10, 0, 1638451, 10, 0, 1638452, 10, 0, 1638453, 10, 0, 1638454, 10, 0, 1638455, 10, 0, 1638456, 10, 0, 1638457, 10, 0, 1638458, 10, 0, 1638459, 10, 0, 1638460, 10, 0, 1638461, 10, 0, 1638462, 10, 0, 1638463, 10, 0, 1638464, 10, 0, 1638472, 1, 0, 1703962, 10, 0, 1703963, 11, 0, 1703964, 10, 0, 1703965, 10, 0, 1703966, 11, 0, 1703967, 11, 0, 1703968, 10, 0, 1703969, 10, 0, 1703970, 11, 0, 1703971, 10, 0, 1703972, 11, 0, 1703973, 10, 0, 1703974, 10, 0, 1703975, 11, 0, 1703976, 11, 0, 1703977, 11, 0, 1703978, 10, 0, 1703979, 10, 0, 1703984, 10, 0, 1703985, 11, 0, 1703986, 10, 0, 1703987, 10, 0, 1703988, 11, 0, 1703989, 11, 0, 1703990, 10, 0, 1703991, 11, 0, 1703992, 10, 0, 1703993, 10, 0, 1703994, 11, 0, 1703995, 10, 0, 1703996, 10, 0, 1703997, 11, 0, 1703998, 10, 0, 1703999, 11, 0, 1704000, 11, 0, 1769498, 11, 0, 1769499, 11, 0, 1769500, 11, 0, 1769501, 11, 0, 1769502, 11, 0, 1769503, 11, 0, 1769504, 11, 0, 1769505, 11, 0, 1769506, 11, 0, 1769507, 11, 0, 1769508, 11, 0, 1769509, 11, 0, 1769510, 11, 0, 1769511, 11, 0, 1769512, 11, 0, 1769513, 11, 0, 1769514, 11, 0, 1769515, 11, 0, 1769520, 11, 0, 1769521, 11, 0, 1769522, 11, 0, 1769523, 11, 0, 1769524, 11, 0, 1769525, 11, 0, 1769526, 11, 0, 1769527, 11, 0, 1769528, 11, 0, 1769529, 11, 0, 1769530, 11, 0, 1769531, 11, 0, 1769532, 11, 0, 1769533, 11, 0, 1769534, 11, 0, 1769535, 11, 0, 1769536, 11, 0, 1835010, 1, 0 )

[node name="coins" type="Node2D" parent="."]

[node name="Lv2coin2" parent="coins" instance=ExtResource( 11 )]
position = Vector2( 1888, 1440 )
__meta__ = {
"_edit_group_": true
}

[node name="Lv2coin5" parent="coins" instance=ExtResource( 11 )]
position = Vector2( 4072, 147 )
__meta__ = {
"_edit_group_": true
}

[node name="Lv2coin6" parent="coins" instance=ExtResource( 11 )]
position = Vector2( 608, 960 )
__meta__ = {
"_edit_group_": true
}

[node name="Lv2coin3" parent="coins" instance=ExtResource( 11 )]
position = Vector2( 3104, 832 )
__meta__ = {
"_edit_group_": true
}

[node name="Lv2coin4" parent="coins" instance=ExtResource( 11 )]
position = Vector2( 2048, 832 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 256, 1568 )

[node name="ingame_song" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 66, 106 )
stream = ExtResource( 10 )
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]

[node name="Portal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2( 4768, 1536 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Portal"]

[node name="PortalYellow" type="Sprite" parent="Portal/Sprite"]
position = Vector2( 4768, 1536 )
texture = ExtResource( 15 )

[node name="coin" type="Label" parent="."]
margin_left = 128.0
margin_top = 1408.0
margin_right = 490.0
margin_bottom = 1546.0
custom_colors/font_color = Color( 0.870588, 0.596078, 0.121569, 1 )
custom_fonts/font = SubResource( 6 )
text = "Collect 5 coins
And go in the Portal
to win!!"
align = 1

[node name="Trap" type="Label" parent="."]
margin_left = 2816.0
margin_top = 1600.0
margin_right = 3078.0
margin_bottom = 1699.0
custom_colors/font_color = Color( 0.956863, 0.0313726, 0.0313726, 1 )
custom_fonts/font = SubResource( 7 )
text = "Trap!!!"

[connection signal="body_entered" from="Fallzone" to="." method="_on_Fallzone_body_entered"]
[connection signal="coin_collect" from="coins/Lv2coin2" to="." method="_on_coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin2" to="Coin HUD" method="_on_Lv2coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin5" to="." method="_on_coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin5" to="Coin HUD" method="_on_Lv2coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin6" to="." method="_on_coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin6" to="Coin HUD" method="_on_Lv2coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin3" to="." method="_on_coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin3" to="Coin HUD" method="_on_Lv2coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin4" to="." method="_on_coin_collect"]
[connection signal="coin_collect" from="coins/Lv2coin4" to="Coin HUD" method="_on_Lv2coin_collect"]
[connection signal="timeout" from="Timer" to="Coin HUD" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
